[package]
name = "grrs"
version = "0.1.0"
edition = "2024"
authors = ["Matt Gale <mgale694@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/mgale694/grrs"
repository = "https://github.com/mgale694/grrs"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
